name:                ld-json-to-csv
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ld-json-to-csv#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -fwarn-incomplete-patterns
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       containers,
                       unordered-containers,
                       hashable,
                       text,
                       bytestring,
                       scientific
  default-language:    Haskell2010

executable ld-json-to-csv-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-patterns
  build-depends:       base
                     , ld-json-to-csv
  default-language:    Haskell2010

test-suite ld-json-to-csv-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ld-json-to-csv
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ld-json-to-csv
